[package]
name = "lab01"
version = "0.1.0"
edition = "2024"

[dependencies]
# Low level access to Cortex-M processors
cortex-m.workspace = true

# Boostrap crate for Cortex-M Processors
cortex-m-rt.workspace = true

cortex-m-semihosting = "0.5.0"

# Defmt support
defmt.workspace = true
defmt-rtt.workspace = true

# Panic handler that exits `probe-run` with an error code
panic-probe.workspace = true
